# councils-dilemna

./: .gitignore  LICENSE  pyproject.toml  readme.md  run.py
cdilemna/: core.py  game.py  user.py
static/: package.json  readme.md  vue.config.js
static/src/: API.js  App.vue  router.js
static/src/components/: CreateGame.vue  GameLobby.vue  HelloWorld.vue  JoinGame.vue  Root.vue  Setup.vue
static/src/components/GameLobby/: GameLobby.vue  Player.vue
